@@ -25,6 +25,7 @@
 - compat-29: Add ~use-region-beginning~, ~use-region-end~ and ~use-region-noncontiguous-p~.
 - compat-29: Add ~get-scratch-buffer-create~.
 - compat-29: Add ~substitute-quotes~.
+- compat-29: Add ~read-multiple-choice~ with LONG-FORM argument.
 
 * Release of "Compat" Version 29.1.2.0
 
